--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,10 @@ matrix:
 build_script:
   - set CC=gcc && set FT_BLAS=openblas && set FT_FFTW_WITH_COMBINED_THREADS=1
   - gcc --version
-  - mingw32-make
+  - mingw32-make assembly
+  - mingw32-make lib
+  - mingw32-make tests
+  - mingw32-make examples
 
 test_script:
   - set OMP_NUM_THREADS=4
