--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ build_script:
 
 test_script:
   - set OMP_NUM_THREADS=4
-  #- test_recurrence.exe
+  - test_recurrence.exe
   - test_transforms.exe
   - test_rotations.exe
   - test_tridiagonal.exe
