--- a/.travis.yml
+++ b/.travis.yml
@@ -102,7 +102,7 @@ before_install: eval "${MATRIX_EVAL}"
 
 script:
   - make
-  #- ./test_recurrence
+  - ./test_recurrence
   - ./test_transforms
   - ./test_rotations
   - ./test_tridiagonal
