Spin-weighted spherical harmonics and refactored use of SIMD (#43)
* start vectorized recurrence summation

The template for Horner's rule is:

ft_horner(n, c, incc, m, x, f)

For Clenshaw's algorithm, it's

ft_clenshaw(n, c, incc, m, x, f)

The coefficients have stride incc, but the points and the output array must be contiguous.

The points and output pointers may be aliased so that in-place evaluation can work with one array for x and f.

The design is as follows:
1. Find the native SIMD flags on the machine that is compiling the code.
2. Define as many internal functions using the highest level of SIMD with SIMD flags. Otherwise, define fallbacks.
3. Define the exported functions with SIMD dispatch based on GCC's cpuid.

This approach allows one to cross-compile and generate optimal code for machines that are as good as the cross compiler. It also allows the code to be callable from machines that are newer than the cross compiler (in case the cross compiler is not state-of-the-art) due to the fallbacks, though newer SIMD is not accessible.

* attempt to fix appveyor

* attempt to fix linux builds

The reported error is:

/usr/bin/ld: /tmp/ccuNTFaV.o: relocation R_X86_64_PC32 against undefined symbol `memset@@GLIBC_2.2.5' can not be used when making a shared object; recompile with -fPIC
500/usr/bin/ld: final link failed: Bad value

* windows fix bis

* link too?

* add tests for AVX512F

apparently, linux build machines already have it

* check SIMD checks

* AVX512F is an extended feature, which needs to be checked with __get_cpuid_count(7, ...)

* attempt cpuid

* fix spacing

* temporarily remove the recurrence module

* separate assembly from source in an attempt to get library flags closer to source?

* flatten the directory tree?

* specify the assembly wihout *

* gotta pump up those levels

* Le commencement du grand dérangement

* double4 => double8

* restore all drivers tests

* make the add

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,12 +18,14 @@ matrix:
 build_script:
   - set CC=gcc && set FT_BLAS=openblas && set FT_FFTW_WITH_COMBINED_THREADS=1
   - gcc --version
+  - mingw32-make assembly
   - mingw32-make lib
   - mingw32-make tests
   - mingw32-make examples
 
 test_script:
   - set OMP_NUM_THREADS=4
+  - test_recurrence.exe
   - test_transforms.exe
   - test_rotations.exe
   - test_tridiagonal.exe
@@ -31,9 +33,10 @@ test_script:
   - test_banded.exe
   - test_dprk.exe
   - test_tdc.exe
-  - test_drivers.exe 3 3 0
-  - test_fftw.exe 3 3 0
+  - test_drivers.exe 1 3 0
+  - test_fftw.exe 1 3 0
   - additiontheorem.exe
   - calculus.exe
   - holomorphic.exe
   - nonlocaldiffusion.exe
+  - spinweighted.exe
