--- a/.travis.yml
+++ b/.travis.yml
@@ -101,8 +101,8 @@ matrix:
 before_install: eval "${MATRIX_EVAL}"
 
 script:
-  - make lib
-  - make tests
+  - make
+  - ./test_recurrence
   - ./test_transforms
   - ./test_rotations
   - ./test_tridiagonal
@@ -110,19 +110,16 @@ script:
   - ./test_banded
   - ./test_dprk
   - ./test_tdc
-  - OMP_NUM_THREADS=4 ./test_drivers 3 3 0
-  - OMP_NUM_THREADS=4 ./test_fftw 3 3 0
-  - make examples
+  - OMP_NUM_THREADS=4 ./test_drivers 1 3 0
+  - OMP_NUM_THREADS=4 ./test_fftw 1 3 0
   - ./additiontheorem
   - ./calculus
   - ./holomorphic
   - ./nonlocaldiffusion
+  - ./spinweighted
 
 after_success:
   - doxygen Doxyfile
-
-before_deploy:
-  - ./travis_deploy.sh
 
 deploy:
   - provider: pages
@@ -131,13 +128,6 @@ deploy:
     github_token: $FT_DOCS
     on:
       branch: master
-  - provider: releases
-    api_key: $FT_BINARIES
-    file_glob: true
-    file: libfasttransforms.*
-    skip_cleanup: true
-    on:
-      tags: true
 
 notifications:
   email: false
