--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ jobs:
       addons:
         homebrew:
           packages: doxygen
+          update: true
       script: doxygen Doxyfile
       deploy:
         - provider: pages
