try adding codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,20 @@ jobs:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
       env: JOBS_EVAL="export CC=gcc-9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+    - stage: "Coverage"
+      os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ubuntu-toolchain-r-test
+          packages: ['libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
+      script:
+        - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
+        - make CC=gcc FT_COVERAGE=1
+        - make runtests FT_NUM_THREADS=4
+        - make coverage COV=gcov
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
     - stage: "Documentation"
       os: osx
       osx_image: xcode10
@@ -118,21 +132,8 @@ before_install: eval "${JOBS_EVAL}"
 
 script:
   - make
-  - ./test_recurrence
-  - ./test_transforms
-  - ./test_rotations
-  - ./test_tridiagonal
-  - ./test_hierarchical
-  - ./test_banded
-  - ./test_dprk
-  - ./test_tdc
-  - OMP_NUM_THREADS=4 ./test_drivers 1 3 0
-  - OMP_NUM_THREADS=4 ./test_fftw 1 3 0
-  - ./additiontheorem
-  - ./calculus
-  - ./holomorphic
-  - ./nonlocaldiffusion
-  - ./spinweighted
+  - make runtests FT_NUM_THREADS=4
+  - make runexamples
 
 notifications:
   email: false
