--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ install:
   - set PATH=c:\tools\vcpkg\installed\x64-windows\bin;%PATH%
 
 build_script:
-  - set CC=gcc && set FT_BLAS=openblas && set FT_FFTW_WITH_COMBINED_THREADS=1
+  - set CC=gcc && set COV=gcov && set FT_BLAS=openblas && set FT_FFTW_WITH_COMBINED_THREADS=1 && set FT_COVERAGE=1
   - gcc --version
   - mingw32-make assembly
   - mingw32-make lib
@@ -36,3 +36,7 @@ test_script:
   - holomorphic.exe
   - nonlocaldiffusion.exe
   - spinweighted.exe
+
+after_success:
+  - mingw32-make coverage
+  - bash <(curl -s https://codecov.io/bash)
