--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: c
 
 jobs:
   include:
+    - stage: "Test"
     # Minimum system requirements
-    - os: osx
+      os: osx
       osx_image: xcode10
       compiler: gcc-4.9
       addons:
