--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,19 +20,6 @@ build_script:
   - mingw32-make examples
 
 test_script:
-  - set OMP_NUM_THREADS=4
-  - test_recurrence.exe
-  - test_transforms.exe
-  - test_rotations.exe
-  - test_tridiagonal.exe
-  - test_hierarchical.exe
-  - test_banded.exe
-  - test_dprk.exe
-  - test_tdc.exe
-  - test_drivers.exe 1 3 0
-  - test_fftw.exe 1 3 0
-  - additiontheorem.exe
-  - calculus.exe
-  - holomorphic.exe
-  - nonlocaldiffusion.exe
-  - spinweighted.exe
+  - set FT_NUM_THREADS=4
+  - mingw32-make runtests
+  - mingw32-make runexamples
