--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,10 @@ jobs:
         homebrew:
           packages: ['gcc@6', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-6 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-6 && export COV=gcov-6 && export FT_COVERAGE=1 && export FT_USE_APPLEBLAS=1"
+      after_success:
+        - make coverage
+        - bash <(curl -s https://codecov.io/bash)
     # Recommended system requirements
     - os: osx
       osx_image: xcode10
@@ -75,7 +78,10 @@ jobs:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-6', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-6 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-6 && export COV=gcov-6 && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      after_success:
+        - make coverage
+        - bash <(curl -s https://codecov.io/bash)
     # Recommended system requirements
     - os: linux
       compiler: gcc-7
@@ -98,28 +104,6 @@ jobs:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
       env: JOBS_EVAL="export CC=gcc-9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-    - stage: "Coverage"
-      os: osx
-      osx_image: xcode10
-      compiler: gcc-7
-      addons:
-        homebrew:
-          packages: ['gcc@7', 'fftw', 'mpfr']
-          update: true
-      env: JOBS_EVAL="export CC=gcc-7 && export COV=gcov-7 && export FT_COVERAGE=1 && export FT_USE_APPLEBLAS=1"
-      after_success:
-        - make coverage
-        - bash <(curl -s https://codecov.io/bash)
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ubuntu-toolchain-r-test
-          packages: ['libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc && export COV=gcov && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-      after_success:
-        - make coverage
-        - bash <(curl -s https://codecov.io/bash)
     - stage: "Documentation"
       os: osx
       osx_image: xcode10
