sequester quadmath dependency
attempt successful compilation with clang

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,20 @@ jobs:
     # Minimum system requirements
       os: osx
       osx_image: xcode10
+      compiler: clang
+      addons:
+        homebrew:
+          packages: ['libomp', 'fftw', 'mpfr']
+          update: true
+      env: JOBS_EVAL="export FT_USE_APPLEBLAS=1"
+    - os: osx
+      osx_image: xcode10
       compiler: gcc-4.9
       addons:
         homebrew:
           packages: ['gcc@4.9', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-4.9 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-4.9 && export FT_QUADMATH=1 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-5
@@ -20,7 +28,7 @@ jobs:
         homebrew:
           packages: ['gcc@5', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-5 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-5 && export FT_QUADMATH=1 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-6
@@ -28,7 +36,7 @@ jobs:
         homebrew:
           packages: ['gcc@6', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-6 && export COV=gcov-6 && export FT_COVERAGE=1 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-6 && export FT_QUADMATH=1 && export COV=gcov-6 && export FT_COVERAGE=1 && export FT_USE_APPLEBLAS=1"
       after_success:
         - make coverage
         - bash <(curl -s https://codecov.io/bash)
@@ -40,7 +48,7 @@ jobs:
         homebrew:
           packages: ['gcc@7', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-7 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-7 && export FT_QUADMATH=1 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-8
@@ -48,7 +56,7 @@ jobs:
         homebrew:
           packages: ['gcc@8', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-8 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-8 && export FT_QUADMATH=1 && export FT_USE_APPLEBLAS=1"
     - os: osx
       osx_image: xcode10
       compiler: gcc-9
@@ -56,7 +64,7 @@ jobs:
         homebrew:
           packages: ['gcc@9', 'fftw', 'mpfr']
           update: true
-      env: JOBS_EVAL="export CC=gcc-9 && export FT_USE_APPLEBLAS=1"
+      env: JOBS_EVAL="export CC=gcc-9 && export FT_QUADMATH=1 && export FT_USE_APPLEBLAS=1"
     # Minimum system requirements
     - os: linux
       compiler: gcc-4.9
@@ -64,21 +72,21 @@ jobs:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-4.9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-4.9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-4.9 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-5
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-5', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-5 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-5 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-6
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-6', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-6 && export COV=gcov-6 && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-6 && export FT_QUADMATH=1 && export COV=gcov-6 && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
       after_success:
         - make coverage
         - bash <(curl -s https://codecov.io/bash)
@@ -89,21 +97,21 @@ jobs:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-7', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-7 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-7 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-8
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-8', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-8 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-8 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc-9
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['gcc-9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-9 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+      env: JOBS_EVAL="export CC=gcc-9 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - stage: "Documentation"
       os: osx
       osx_image: xcode10
