--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,8 @@ jobs:
       addons:
         homebrew:
           packages: ['libomp', 'openblas', 'fftw', 'mpfr']
-      env: JOBS_EVAL="export CC=clang && export COV=gcov && export FT_COVERAGE=1"
-      after_success:
-        - make coverage
-        - bash <(curl -s https://codecov.io/bash)
-      os: osx
+      env: JOBS_EVAL="export CC=clang"
+    - os: osx
       osx_image: xcode11
       compiler: gcc
       addons:
