--- a/.travis.yml
+++ b/.travis.yml
@@ -21,51 +21,22 @@ jobs:
       env: JOBS_EVAL="export CC=gcc"
     # Minimum system requirements
     - os: linux
-      compiler: gcc-4.9
+      compiler: clang
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
-          packages: ['gcc-4.9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-4.9 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+          packages: ['libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
+      env: JOBS_EVAL="export CC=clang && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
-      compiler: gcc-5
+      compiler: gcc
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
-          packages: ['gcc-5', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-5 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-    - os: linux
-      compiler: gcc-6
-      addons:
-        apt:
-          sources: ubuntu-toolchain-r-test
-          packages: ['gcc-6', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-6 && export FT_QUADMATH=1 && export COV=gcov-6 && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
+          packages: ['libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
+      env: JOBS_EVAL="export CC=gcc && export FT_QUADMATH=1 && export COV=gcov && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
       after_success:
         - make coverage
         - bash <(curl -s https://codecov.io/bash)
-    # Recommended system requirements
-    - os: linux
-      compiler: gcc-7
-      addons:
-        apt:
-          sources: ubuntu-toolchain-r-test
-          packages: ['gcc-7', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-7 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-    - os: linux
-      compiler: gcc-8
-      addons:
-        apt:
-          sources: ubuntu-toolchain-r-test
-          packages: ['gcc-8', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-8 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-    - os: linux
-      compiler: gcc-9
-      addons:
-        apt:
-          sources: ubuntu-toolchain-r-test
-          packages: ['gcc-9', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=gcc-9 && export FT_QUADMATH=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - stage: "Documentation"
       os: osx
       osx_image: xcode11
