coverage on clang too slow

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,7 @@ jobs:
         apt:
           sources: ubuntu-toolchain-r-test
           packages: ['libomp-dev', 'libblas-dev', 'libopenblas-base', 'libfftw3-dev', 'libmpfr-dev']
-      env: JOBS_EVAL="export CC=clang && export COV=gcov && export FT_COVERAGE=1 && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
-      after_success:
-        - make coverage
-        - bash <(curl -s https://codecov.io/bash)
+      env: JOBS_EVAL="export CC=clang && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:."
     - os: linux
       compiler: gcc
       addons:
