--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         exclude:
           - os: macOS-latest
             arch: x86
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies on macOS
