--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   - pull_request
 jobs:
   test:
-    name: C ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    name: C - ${{ matrix.os }} - ${{ matrix.compiler }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -29,7 +29,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libomp-dev libblas-dev libopenblas-base libfftw3-dev libmpfr-dev
-          export CC=${{ matrix.compiler }} && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
+          export CC=${{ matrix.compiler }}
+        env:
+          LD_LIBRARY_PATH: .
       - name: Install dependencies on macOS
         if: startsWith(matrix.os, 'macOS')
         run: |
