--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: cc --version
       - name: Build library
         run: |
-          echo $GITHUB_WORKSPACE
+          echo $LD_LIBRARY_PATH
           make
             make runtests FT_NUM_THREADS=2
             make runexamples
