--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         run: cc --version
       - name: Build library
         run: |
+          export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:.
           echo $LD_LIBRARY_PATH
           echo $LD_LIBRARY_PATH
           make
