--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
             arch: x86
           - os: macOS-latest
             arch: aarch64
+          - os: windows-latest
+            arch: aarch64
       fail-fast: false
     env:
       CC: ${{ matrix.compiler }}
@@ -40,6 +42,9 @@ jobs:
         run: |
           brew update
           brew install libomp openblas fftw mpfr
+      - name: Install dependencies on Windows
+        if: startsWith(matrix.os, 'windows')
+        run: vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpfr:x64-windows mpir:x64-windows --recurse
       - name: Compiler version
         run: ${CC} --version
       - name: Build assembly
