--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os:
           - ubuntu-latest
           - macOS-latest
-          #- windows-latest
+          - windows-latest
         compiler:
           - gcc
           - clang
