--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+            env:
+              LD_LIBRARY_PATH: .
           - macOS-latest
           - windows-latest
+            env:
+              make: mingw32-make
         compiler:
           - gcc
           - clang
@@ -29,7 +33,6 @@ jobs:
       fail-fast: false
     env:
       CC: ${{ matrix.compiler }}
-      LD_LIBRARY_PATH: .
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies on ubuntu
@@ -42,9 +45,20 @@ jobs:
         run: |
           brew update
           brew install libomp openblas fftw mpfr
+      - name: Cache dependencies on Windows
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-dependencies
+          with:
+            path: ${{ VCPKG_INSTALLATION_ROOT }}/packages/
+            key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles( '**/vcpkg.json' ) }}
+            restore-keys: |
+              ${{ runner.os }}-test-${{ env.cache-name }}-
+              ${{ runner.os }}-test-
+              ${{ runner.os }}-
       - name: Install dependencies on Windows
         if: startsWith(matrix.os, 'windows')
-        run: vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpfr:x64-windows mpir:x64-windows --recurse
+        run: vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpfr:x64-windows --recurse
       - name: Compiler version
         run: ${CC} --version
       - name: Build assembly
